Change Log
Spring 2019
CS 4800
Thomas Lawing

2/11/19 - Initial post-test session
		- Initialized GitHub repository
		- Created specifications.txt
		- Created changelog.txt
		- Created roadmap.txt
		- Created README.mp
		- Created holder html files for "index", "newDatabase", "myAccount",
		"login", "createAccount", and "contact"
		- Created "exapmle.html", which uses "style.css", a file from a
		database project last semester
		- Created two sub-directories, "documents" and "web_framework", and
		moved all files into their proper locations

2/18/29 - Second session
		- Created holder html files for "search", "community", and "about"
		- Set up initial layout for "index.html"
		- Added navbar and footer to "index.html", with a little CSS
		- Linked "search.html", "about.html", "newDatabase.html",
		"community.html", and "account.html" to the navbar on "index.html"
		- Created "connection.php", the first step to linking a database to
		the actual website