@@ -1,6 +1,20 @@
 <html>
 
-<h1>Create Database holder</h1>
+<h1>Insert a new player</h1>
+
+<body>
+<form action="insert2Players.php" method="get">
+Name: <input type="text" name="name"><br>
+Team: <input type="text" name="team"><br>
+<input type="Submit" value="Insert">
+</form>
+
+<form action="update.php" method="get">
+Name: <input type="text" name="name">
+<input type="Submit" value="Search">
+</form>
+
+</body>
 
 </html>
 
