@@ -16,7 +16,7 @@ Thomas Lawing
 		- Created two sub-directories, "documents" and "web_framework", and
 		moved all files into their proper locations
 
-2/18/29 - Second session
+2/18/19 - Second session
 		- Created holder html files for "search", "community", and "about"
 		- Set up initial layout for "index.html"
 		- Added navbar and footer to "index.html", with a little CSS
@@ -24,3 +24,12 @@ Thomas Lawing
 		"community.html", and "account.html" to the navbar on "index.html"
 		- Created "connection.php", the first step to linking a database to
 		the actual website
+
+2/25/19 - Third session
+		- Entire session was spent working on and troubleshooting how to
+		properly implement usage of the MySQL workbench on my own created html
+		and php files
+		- Test code was added under my apache2 folder, where I was able to
+		successfully link a blank database and an a 2-column entry(name, team)
+		- Tried adding a third column(position), but nothing is going into the
+		column
